# buddhachess

./: .env  .env.sample  .gitignore  Readme.md  alembic.ini  alembic.ini.sample  db.py  main.py  pyproject.toml  run.sh  settings.py  start_uvicorn.sh
alembic/: env.py
alembic/versions/: 4167dc46a0b0_2.py  9c44d324bfcf_3.py  b7e68d03e74c_5.py
app/: db.py  main.py  settings.py
app/auth/: api.py  models.py  router.py  schemas.py  servises.py
app/auth/routers/: api.py  (+1 more)
app/base/: routers.py
app/db/: db.py
app/game/: models.py
app/models/: base.py  game.py  user.py
app/routers/: __init__.py  path.py
app/services/: auth.py  base_auth.py  http_error.py  send_email.py  websocket.py
app/shemas/: dna.py
app/templates/: base.html  dna.html
app/users/: api.py  servises.py
apps/article/: router.py
apps/auth/: models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 068864593c40_6.py  24aedad3c322_init.py  285ff61fc2b1_1.py  35827cd1afe4_init3.py  3c047a43d111_init4.py  40f6aa901112_init.py  5b7d80adfc1c_init2.py  71128b3821d4_1.py  856b4540997e_7.py  8a6e80305127_init.py  8b3f93679bf9_1.py  9b27b3b39448_4.py  b92869e77fd5_5.py  c58f93f58edf_2.py  c9f615c2bc49_3.py  ed273659f5a2_init2.py  f9f7bb000268_init5.py
static/css/: game.css  static.css  style.css
static/js/: admin_panel.js  auth.js  chess960_start_position.js  chess_position.js  create_game.js  game.js  web.js
templates/: base.html
templates/admin/: base.html
templates/auth/: account_verify.html  login.html  password_confirm.html  register.html  repeat_verify_activation.html  reset_password.html  reset_password_confirm.html  verify_activation.html
templates/docs/: docs.html  flang.html  in-yan.html  in-yan_fib.html  in-yan_flang.html
templates/game/: create_game.html  game.html  start.html
(+42 files in other folders)
