[tool.poetry]
name = "buddha_chess"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dmitriy@bessalov.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.20"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
