[tool.poetry]
name = "buddha_chess"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dmitriy@bessalov.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
asyncpg = "^0.23.0"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
PyJWT = "^2.1.0"
passlib = "^1.7.4"
email-validator = "^1.1.3"
emails = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
